spacing of .title fixed

--- a/style.css
+++ b/style.css
@@ -352,7 +352,7 @@ content: '';
 /* HERO SECTION */
 
 section {
-    padding-top: 4vh;
+    padding-top: 10vh;
     height: 50vh;
     margin: 0 3rem;
     box-sizing: border-box;
@@ -395,6 +395,9 @@ section {
     padding: 2rem;
     border-radius: 2rem;
     animation: fadeIn 1.5s ease-in-out;
+    margin-right: 2rem;
+    margin-left: 2rem;
+    margin-bottom: 2rem;
 }
 
 .section__text p {
@@ -418,7 +421,6 @@ section {
     text-align: center;
     color: black;
     padding-bottom: 2rem;
-    font-weight: bolder;
 }
 
 /* BUTTONS */
@@ -497,10 +499,10 @@ section {
     scroll-behavior: smooth;
     box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
     border-radius: 2rem;
+    margin-bottom: 2rem;
 }
 
 .slider img {
     max-width: 40%;
     max-height: auto;
 }
-
